Added Customer Support Feature

--- a/backend/.env
+++ b/backend/.env
@@ -1,4 +1,4 @@
-MONGO_URI=mongodb+srv://i222446:Imad123@databaseweb.sb64l.mongodb.net/?retryWrites=true&w=majority&appName=DatabaseWeb
+MONGO_URI=mongodb://localhost:27017/Web_Project
 JWT_SECRET=244626132714
 PORT=3000
 
