--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,15 +10,20 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emotion/react": "^11.13.5",
+    "@emotion/styled": "^11.13.5",
+    "@mui/material": "^6.1.10",
     "@radix-ui/react-dialog": "^1.1.2",
     "@radix-ui/react-dropdown-menu": "^2.1.2",
     "axios": "^1.7.9",
     "class-variance-authority": "^0.7.1",
     "framer-motion": "^11.13.1",
+    "jwt-decode": "^4.0.0",
     "lucide-react": "^0.468.0",
     "next": "^15.0.4",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-hot-toast": "^2.4.1",
     "react-router-dom": "^7.0.2",
     "tailwind-merge": "^2.5.5",
     "zustand": "^5.0.2"
