--- a/frontend/package.json
+++ b/frontend/package.json
@@ -21,11 +21,13 @@
     "jwt-decode": "^4.0.0",
     "lucide-react": "^0.468.0",
     "next": "^15.0.4",
+    "qrcode.react": "^4.1.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^5.4.0",
     "react-player": "^2.16.0",
+    "react-qr-code": "^2.0.15",
     "react-router-dom": "^7.0.2",
     "tailwind-merge": "^2.5.5",
     "zustand": "^5.0.2"
